--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
        }
 
        :root {
-          --primarycolors: #81b29a;
-          --footer-color:#3d405b;
+          --primarycolors: #8cb281;
+          --footer-color:#0c177a;
           --secondary-color:#e07a5f;
           --app-color:rgb(251, 238, 238);
        }
