--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
        }
 
        :root {
-          --primarycolors: #000000;
+          --primarycolors: #ff0022;
           --footer-color:#ffffff;
           --secondary-color:#00bbb8;
           --app-color:rgb(71, 2, 2);
